Lab 4 and Lab 5

--- a/students_submissions/8786567/lab4.ipynb
+++ b/students_submissions/8786567/lab4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {
     "tags": [
      "code"
@@ -68,12 +68,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Lab 4\n",
+    "\n",
     "## Linear Regression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {
     "tags": []
    },
@@ -96,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "metadata": {
     "tags": [
      "code"
@@ -176,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "metadata": {
     "tags": [
      "code"
@@ -198,7 +200,7 @@
        "       's5^2', 's5 s6', 's6^2'], dtype=object)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "metadata": {
     "tags": [
      "code"
@@ -230,7 +232,7 @@
        "(353, 10)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {
     "tags": [
      "code"
@@ -262,7 +264,7 @@
        "(353, 65)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,6 +306,116 @@
     "For both of the residual plots, data points are clustered above or below of the residual line = 0.\n",
     "In the case of percentage error, more data points are clustered around zero percentage and the rest can be considered as outliers.\n",
     "From the histogram we can see that the most of the error frequency is around zero and can conclude that it is a good fit to an extend."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "lab5"
+    ]
+   },
+   "source": [
+    "## Lab 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "tags": [
+     "lab5"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "from matplotlib import pyplot as plt\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "tags": [
+     "lab5"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "cross_val_scores = []\n",
+    "degrees = np.arange(0, 9)\n",
+    "\n",
+    "for degree in degrees:\n",
+    "    model = make_pipeline(PolynomialFeatures(degree), LinearRegression())\n",
+    "    cross_validation_scores = cross_val_score(model, X, y, cv=5, scoring='r2')\n",
+    "    mean_Rts = cross_validation_scores.mean()\n",
+    "    sd_Rts = cross_validation_scores.std()\n",
+    "\n",
+    "    cross_validation_scores_MAE = cross_val_score(model, X, y, cv=5, scoring='neg_mean_absolute_error')\n",
+    "    mean_MAE = cross_validation_scores_MAE.mean()\n",
+    "    sd_MAE = cross_validation_scores_MAE.std()\n",
+    "\n",
+    "    cross_val_scores.append([mean_Rts, sd_Rts, mean_MAE, sd_MAE])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "tags": [
+     "lab5"
+    ]
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Mean R-squared  SD R-squared     Mean MAE      SD MAE\n",
+      "0       -0.027506      0.036772   -66.045624    3.474660\n",
+      "1        0.482316      0.049269   -44.276499    2.100110\n",
+      "2       -0.347201      0.646338   -63.546356   14.945520\n",
+      "3     -203.419262    225.878240  -342.052099  142.438438\n",
+      "4     -571.083108    369.891883  -657.260477  159.475902\n",
+      "5     -436.856887    379.100423  -562.993636   59.917202\n",
+      "6    -1695.309739   2632.376370  -742.593286  191.001342\n",
+      "7    -5530.894075   9518.586954 -1032.681725  393.439617\n",
+      "8   -16076.255117  28049.952580 -1475.658532  706.280274\n",
+      "The degree with the highest cross-validation score, when metric is R squared 1\n",
+      "The degree with the highest cross-validation score, when metric is MAE 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.DataFrame(cross_val_scores, columns=['Mean R-squared','SD R-squared', 'Mean MAE', 'SD MAE'])\n",
+    "print(df)\n",
+    "\n",
+    "max_Rsquared_score = degrees[np.argmax(df['Mean R-squared'])]\n",
+    "\n",
+    "print(f\"The degree with the highest cross-validation score, when metric is R squared {max_Rsquared_score}\")\n",
+    "\n",
+    "max_MAE_score = degrees[np.argmax(df['Mean MAE'])]\n",
+    "\n",
+    "print(f\"The degree with the highest cross-validation score, when metric is MAE {max_MAE_score}\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "lab5"
+    ]
+   },
+   "source": [
+    "The linear model with degree 1 has the highest R squared value and has the maximum MAE value, hence it is the best model when compared to all other models."
    ]
   }
  ],
