--- a/students_submissions/8896839/lab5.ipynb
+++ b/students_submissions/8896839/lab5.ipynb
@@ -11,9 +11,7 @@
     "\n",
     "1. Utilize the diabetes dataset from lab 4. Perform cross-validation on nine polynomial models, ranging from degree 0 to 8. (2 points)\n",
     "2. Construct a table summarizing the cross-validation results. Each model should have a separate row in the table. Include the R-Squared and Mean Absolute Error (MAE) metrics for each model. Calculate the mean value and standard deviation of these metrics from the cross-validation. Include both values. (2 points)\n",
-    "3. Identification of the Best Model: Identify the model that exhibits the highest performance based on the R-Squared and MAE metrics. Provide an explanation for choosing this specific model. (2 points)\n",
-    "\n",
-    "Optional (No Extra Grade):Additional analysis and interpretation of the models' performances are welcome. You may explore further insights beyond the required metrics. Feel free to include your findings."
+    "3. Identification of the Best Model: Identify the model that exhibits the highest performance based on the R-Squared and MAE metrics. Provide an explanation for choosing this specific model. (2 points)"
    ]
   },
   {
@@ -28,6 +26,7 @@
     "from sklearn import datasets\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.preprocessing import PolynomialFeatures\n",
+    "from sklearn.pipeline import make_pipeline\n",
     "# from sklearn.metrics import mean_absolute_error\n",
     "from sklearn.model_selection import (\n",
     "    train_test_split,\n",
@@ -37,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +45,7 @@
        "((442, 10), (442,))"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +68,7 @@
        "((353, 10), (353,))"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +91,7 @@
        "((89, 10), (89,))"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +287,7 @@
        "9  29.0  1.0  30.0   85.0  180.0   93.4  43.0  4.00  5.3845  88.0"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +312,7 @@
        "Name: target, dtype: float64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -333,46 +332,13 @@
        "(442, 10)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "X.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 442 entries, 0 to 441\n",
-      "Data columns (total 10 columns):\n",
-      " #   Column  Non-Null Count  Dtype  \n",
-      "---  ------  --------------  -----  \n",
-      " 0   age     442 non-null    float64\n",
-      " 1   sex     442 non-null    float64\n",
-      " 2   bmi     442 non-null    float64\n",
-      " 3   bp      442 non-null    float64\n",
-      " 4   s1      442 non-null    float64\n",
-      " 5   s2      442 non-null    float64\n",
-      " 6   s3      442 non-null    float64\n",
-      " 7   s4      442 non-null    float64\n",
-      " 8   s5      442 non-null    float64\n",
-      " 9   s6      442 non-null    float64\n",
-      "dtypes: float64(10)\n",
-      "memory usage: 34.7 KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "X.info()"
    ]
   },
   {
@@ -385,78 +351,183 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define a function to create polynomial models and perform cross-validation\n",
-    "def perform_cross_validation(degree):\n",
-    "    # Create polynomial features\n",
-    "    poly = PolynomialFeatures(degree=degree)\n",
-    "    X_train_poly = poly.fit_transform(X_train)\n",
+    "cross_val_scores = []\n",
+    "degrees = np.arange(0, 9)\n",
     "\n",
-    "    # Perform cross-validation\n",
-    "    model = LinearRegression()\n",
-    "    scores_r2 = cross_val_score(model, X_train_poly, y_train, cv=5, scoring='r2') # 5-fold cv\n",
-    "    scores_mae = cross_val_score(model, X_train_poly, y_train, cv=5, scoring='neg_mean_absolute_error') #MAE\n",
+    "for degree in degrees:\n",
+    "    # Make a pipeline\n",
+    "    model = make_pipeline(PolynomialFeatures(degree), LinearRegression())\n",
+    "    # Apply cross-validation and calcaute mean and standard deviation on 5 folds\n",
+    "    cv_scores = cross_val_score(model, X, y, cv=5, scoring='r2')\n",
+    "    mean_r2 = cv_scores.mean()\n",
+    "    std_r2 = cv_scores.std()\n",
     "\n",
-    "    # Calculate mean and standard deviation\n",
-    "    mean_r2 = np.mean(scores_r2)\n",
-    "    std_r2 = np.std(scores_r2)\n",
-    "    mean_mae = -np.mean(scores_mae)\n",
-    "    std_mae = np.std(scores_mae)\n",
+    "    cv_scores_MAE = cross_val_score(model, X, y, cv=5, scoring='neg_mean_absolute_error')\n",
+    "    mean_MAE = cv_scores_MAE.mean()\n",
+    "    std_MAE = cv_scores_MAE.std()\n",
     "\n",
-    "    return mean_r2, std_r2, mean_mae, std_mae"
+    "    cross_val_scores.append([degree ,mean_r2, std_r2, mean_MAE, std_MAE])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a list to store the cross-validation results\n",
-    "results = []\n",
-    "\n",
-    "# Iterate over different polynomial degrees and perform cross-validation\n",
-    "for degree in range(9):\n",
-    "    mean_r2, std_r2, mean_mae, std_mae = perform_cross_validation(degree)\n",
-    "    results.append([degree, mean_r2, std_r2, mean_mae, std_mae])"
+    "df = pd.DataFrame(cross_val_scores, columns=['Degree','Mean R-Squared','Standard dev R-Squared', 'Mean MAE', 'Standard dev MAE'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   Degree  Mean R-Squared  Std R-Squared     Mean MAE     Std MAE\n",
-      "0       0       -0.030469       0.047964    66.759216    7.282955\n",
-      "1       1        0.449256       0.144095    45.543329    3.114136\n",
-      "2       2       -1.774636       2.061861    86.272470   21.303926\n",
-      "3       3    -1067.917338     713.426262   955.567804  230.116961\n",
-      "4       4     -205.000825     109.833480   498.899342  139.303076\n",
-      "5       5     -341.064592     285.522005   533.337079  183.993533\n",
-      "6       6     -752.566519     723.952751   664.415606  255.201828\n",
-      "7       7    -1604.957874    1666.816468   861.068169  360.606033\n",
-      "8       8    -3668.447375    4094.407062  1171.089566  565.618535\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Degree</th>\n",
+       "      <th>Mean R-Squared</th>\n",
+       "      <th>Standard dev R-Squared</th>\n",
+       "      <th>Mean MAE</th>\n",
+       "      <th>Standard dev MAE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.027506</td>\n",
+       "      <td>0.036772</td>\n",
+       "      <td>-66.045624</td>\n",
+       "      <td>3.474660</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.482316</td>\n",
+       "      <td>0.049269</td>\n",
+       "      <td>-44.276499</td>\n",
+       "      <td>2.100110</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>-0.528281</td>\n",
+       "      <td>1.086913</td>\n",
+       "      <td>-66.857204</td>\n",
+       "      <td>24.676461</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>-203.419757</td>\n",
+       "      <td>225.878956</td>\n",
+       "      <td>-342.052180</td>\n",
+       "      <td>142.438635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>-571.083108</td>\n",
+       "      <td>369.891883</td>\n",
+       "      <td>-657.260477</td>\n",
+       "      <td>159.475902</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "      <td>-436.856887</td>\n",
+       "      <td>379.100423</td>\n",
+       "      <td>-562.993636</td>\n",
+       "      <td>59.917202</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>6</td>\n",
+       "      <td>-1695.473267</td>\n",
+       "      <td>2632.637763</td>\n",
+       "      <td>-742.496432</td>\n",
+       "      <td>191.119317</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>7</td>\n",
+       "      <td>-5530.894075</td>\n",
+       "      <td>9518.586955</td>\n",
+       "      <td>-1032.681725</td>\n",
+       "      <td>393.439617</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>8</td>\n",
+       "      <td>-16076.255116</td>\n",
+       "      <td>28049.952578</td>\n",
+       "      <td>-1475.658532</td>\n",
+       "      <td>706.280274</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Degree  Mean R-Squared  Standard dev R-Squared     Mean MAE   \n",
+       "0       0       -0.027506                0.036772   -66.045624  \\\n",
+       "1       1        0.482316                0.049269   -44.276499   \n",
+       "2       2       -0.528281                1.086913   -66.857204   \n",
+       "3       3     -203.419757              225.878956  -342.052180   \n",
+       "4       4     -571.083108              369.891883  -657.260477   \n",
+       "5       5     -436.856887              379.100423  -562.993636   \n",
+       "6       6    -1695.473267             2632.637763  -742.496432   \n",
+       "7       7    -5530.894075             9518.586955 -1032.681725   \n",
+       "8       8   -16076.255116            28049.952578 -1475.658532   \n",
+       "\n",
+       "   Standard dev MAE  \n",
+       "0          3.474660  \n",
+       "1          2.100110  \n",
+       "2         24.676461  \n",
+       "3        142.438635  \n",
+       "4        159.475902  \n",
+       "5         59.917202  \n",
+       "6        191.119317  \n",
+       "7        393.439617  \n",
+       "8        706.280274  "
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Create a DataFrame to store the results\n",
-    "results_df = pd.DataFrame(results, columns=['Degree', 'Mean R-Squared', 'Std R-Squared', 'Mean MAE', 'Std MAE'])\n",
-    "\n",
-    "# Print the results table\n",
-    "print(results_df)"
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -471,12 +542,27 @@
    ],
    "source": [
     "# Identify the best model based on R-Squared and MAE metrics\n",
-    "best_r2_model = results_df['Mean R-Squared'].idxmax()\n",
-    "best_mae_model = results_df['Mean MAE'].idxmin()\n",
+    "best_r2_model = degrees[np.argmax(df['Mean R-Squared'])]\n",
+    "best_mae_model = degrees[np.argmax(df['Mean MAE'])]\n",
     "\n",
-    "print(f\"\\nBest model based on R-Squared: Degree {results_df['Degree'][best_r2_model]}\")\n",
-    "print(f\"Best model based on MAE: Degree {results_df['Degree'][best_mae_model]}\")"
+    "print(f\"\\nBest model based on R-Squared: Degree {df['Degree'][best_r2_model]}\")\n",
+    "print(f\"Best model based on MAE: Degree {df['Degree'][best_mae_model]}\")"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As shown above, polynomial regression with model degree 1 gives the highest scores with mean r2 = 0.482316 and mean mae = -44.276499 (The scorer objects adhere to a convention where higher values are considered better than lower values) which means it has the least error.\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
